add model and controller for travel api
