# api/travel-service/src/main/java/br/com/sas/travel/planner/controller/TravelPlannerController.java
@@ -6,14 +6,21 @@ import org.openapitools.model.TravelPlanningRequest;
 import org.openapitools.model.TravelPlanningResponse;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ServerWebExchange;
 
 import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 @Slf4j
 @RestController
 public class TravelPlannerController implements TravelApi {
 
-	@Override
+	@Override public Mono<ResponseEntity<Flux<TravelPlanningResponse>>> travelPost(Mono<TravelPlanningRequest> travelPlanningRequest,
+			ServerWebExchange exchange) {
+		return TravelApi.super.travelPost(travelPlanningRequest, exchange);
+	}
+
 	public ResponseEntity<TravelPlanningResponse> travelPost(TravelPlanningRequest request) {
 		return ResponseEntity.ok(new TravelPlanningResponse()
 				.type(TravelPlanningResponse.TypeEnum.CRITERIA)
